# wasm-peers

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  LICENSE_MIT  README.md  Shuttle.toml  justfile  rustfmt.toml
.cargo/: config
.github/workflows/: audit.yml  cd.yml  ci.yml  deploy-live-document.yml  deploys.yml  tests.yml
library-client/: Cargo.toml  index.html
library-client/src/: lib.rs
library-server/: Cargo.toml  index.html
library-server/src/: lib.rs
live-document/: Cargo.toml  index.html
live-document/src/: document.rs  home.rs  main.rs
protocol/: Cargo.toml  README.md
protocol/src/: common.rs  lib.rs  many_to_many.rs  one_to_many.rs  one_to_one.rs
signaling-server/: .env  Cargo.toml  README.md
signaling-server/axum/: Cargo.toml  README.md
signaling-server/axum/src/: lib.rs  main.rs  many_to_many.rs  one_to_many.rs  one_to_one.rs
signaling-server/axum/tests/: integration.rs
signaling-server/src/: lib.rs  main.rs  many_to_many.rs  one_to_many.rs  one_to_one.rs  router.rs  server.rs
signaling-server/warp/: Cargo.toml  README.md
signaling-server/warp/src/: env.rs  main.rs
src/: client_server.rs  lib.rs  network_manager.rs
xtask/: Cargo.toml
xtask/src/: main.rs
