[package]
name = "rusty-games-server"
version = "0.1.0"
authors = ["Tomek Karwowski <to.karwowski@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1.6", optional = true }
log = "0.4"
wasm-logger = "0.2"

rusty-games-library = {path = "../library"}
