[package]
name = "live-document"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
yew = "0.19.3"
yew-router = "0.16.0"
log = "0.4.14"
wasm-logger = "0.2.0"
web-sys = "0.3.55"
wasm-bindgen = "0.2.78"
serde = "1.0"

rusty-games-library = { path = "../library" }
