[package]
name = "wasm-peers-protocol"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy-to-use wrapper for WebRTC DataChannels peer-to-peer connections written in Rust and compiling to WASM."
#homepage
repository = "https://github.com/wasm-peers/wasm-peers"
keywords = ["wasm", "webrtc", "datachannel", "peer-to-peer", "webassembly"]
categories = ["wasm", "network-programming", "web-programming"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
