[package]
name = "wasm-peers-signaling-server"
version = "0.3.0"
authors = ["Tomasz Karwowski <to.karwowski@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy-to-use wrapper for WebRTC DataChannels peer-to-peer connections written in Rust and compiling to WASM."
#homepage
repository = "https://github.com/wasm-peers/wasm-peers"
keywords = ["wasm", "webrtc", "datachannel", "peer-to-peer", "webassembly"]
categories = ["wasm", "network-programming", "web-programming"]
readme = "README.md"

[dependencies]
futures-util = "0.3.21"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
warp = "0.3.2"
simplelog = "0.8.0"
log = "0.4.8"

wasm-peers-protocol = { path = "../protocol", version = "0.3" }
