[package]
authors = ["Paul Mayer <paul@paul-mayer.eu>"]
description = "Easy-to-use wrapper for WebRTC DataChannels peer-to-peer connections written in Rust and compiling to WASM."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "wasm-peers-signaling-server-axum"
version = "0.3.0"
categories = ["wasm", "network-programming", "web-programming"]
keywords = ["wasm", "webrtc", "datachannel", "peer-to-peer", "webassembly"]
readme = "README.md"
repository = "https://github.com/wasm-peers/wasm-peers"

[dependencies]
anyhow = "1"
futures-util = "0.3.21"
log = "0.4.8"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
simplelog = "0.12.0"
tokio = {version = "1.14.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1.8"
axum = { version = "0.5.16", features = ["ws"] }
wasm-peers-protocol = {path = "../protocol", version = "0.3"}
uuid = "1.1.2"

[dev-dependencies]
wasm-peers = {path = "../library", version = "0.4.1"}
