[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

authors = ["Tomasz Karwowski <to.karwowski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Xtask for wasm-peers"
#homepage
repository = "https://github.com/wasm-peers/wasm-peers"
keywords = ["xtask", "scripts", "devtools"]
categories = ["xtask", "scripts"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
project-root = "0.2"
xshell = "0.2"
